[gd_scene load_steps=14 format=2]

[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/bomb_03.wav" type="AudioStream" id=2]
[ext_resource path="res://game/cross_01.wav" type="AudioStream" id=3]
[ext_resource path="res://game/bomb_01.wav" type="AudioStream" id=4]
[ext_resource path="res://game/bomb_spawn_01.wav" type="AudioStream" id=5]
[ext_resource path="res://game/tick_01.wav" type="AudioStream" id=6]
[ext_resource path="res://game/bomb_02.wav" type="AudioStream" id=7]
[ext_resource path="res://game/smash_ball.gd" type="Script" id=8]
[ext_resource path="res://framework/resources/shapes/8/square_8.png" type="Texture2D" id=9]
[ext_resource path="res://game/cross_02.wav" type="AudioStream" id=10]
[ext_resource path="res://game/cross_03.wav" type="AudioStream" id=11]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 195, 1.5 )

[node name="SmashBall" type="Node2D"]
z_index = 1
script = ExtResource( 8 )
explosion_time = 2.25
tick_count = 4
noise_rate = 1250.0
explosion_duration = 1.0

[node name="VisualShadow" type="Node2D" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0.490196 )
position = Vector2( 2, 1 )
z_index = -8

[node name="Line2D" type="Line2D" parent="VisualShadow"]
points = PackedVector2Array( 0, 0, 200, 0 )
width = 6.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D2" type="Line2D" parent="VisualShadow"]
points = PackedVector2Array( 0, 0, -200, 0 )
width = 6.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D3" type="Line2D" parent="VisualShadow"]
points = PackedVector2Array( 0, 0, 0, 200 )
width = 6.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D4" type="Line2D" parent="VisualShadow"]
points = PackedVector2Array( 0, 0, 0, -200 )
width = 6.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="PreVisualShadow" type="Node2D" parent="."]
modulate = Color( 0, 0, 0, 0.588235 )
position = Vector2( 2, 1 )
scale = Vector2( 0.5, 0.5 )
z_index = -8

[node name="Line2D" type="Line2D" parent="PreVisualShadow"]
points = PackedVector2Array( 0, 0, 50, 0 )
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D2" type="Line2D" parent="PreVisualShadow"]
points = PackedVector2Array( 0, 0, -50, 0 )
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D3" type="Line2D" parent="PreVisualShadow"]
points = PackedVector2Array( 0, 0, 0, 50 )
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D4" type="Line2D" parent="PreVisualShadow"]
points = PackedVector2Array( 0, 0, 0, -50 )
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color( 0, 0, 0, 0.490196 )
position = Vector2( 2, 1 )
z_index = -8
texture = ExtResource( 9 )

[node name="Visual" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="Line2D" type="Line2D" parent="Visual"]
points = PackedVector2Array( 0, 0, 200, 0 )
width = 6.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D2" type="Line2D" parent="Visual"]
points = PackedVector2Array( 0, 0, -200, 0 )
width = 6.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D3" type="Line2D" parent="Visual"]
points = PackedVector2Array( 0, 0, 0, 200 )
width = 6.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Line2D4" type="Line2D" parent="Visual"]
points = PackedVector2Array( 0, 0, 0, -200 )
width = 6.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="PreVisual" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="Line2D" type="Line2D" parent="PreVisual"]
points = PackedVector2Array( 0, 0, 75, 0 )
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.909804, 0.717647, 0.588235, 1 )

[node name="Line2D2" type="Line2D" parent="PreVisual"]
points = PackedVector2Array( 0, 0, -75, 0 )
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.909804, 0.717647, 0.588235, 1 )

[node name="Line2D3" type="Line2D" parent="PreVisual"]
points = PackedVector2Array( 0, 0, 0, 75 )
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.909804, 0.717647, 0.588235, 1 )

[node name="Line2D4" type="Line2D" parent="PreVisual"]
points = PackedVector2Array( 0, 0, 0, -75 )
width = 6.0
width_curve = SubResource( 2 )
default_color = Color( 0.909804, 0.717647, 0.588235, 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 0.909804, 0.717647, 0.588235, 1 )
z_index = 1
texture = ExtResource( 9 )

[node name="Blink" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource( 9 )

[node name="ExplosionArea" type="Area2D" parent="."]
z_index = 11
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ExplosionArea"]
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SpawnSound" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SpawnSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 5 )
bus = "BombSpawn"

[node name="TickSound" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TickSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 6 )
bus = "Game"

[node name="ExplodeSound" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 4 )
bus = "Game"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 7 )
bus = "Game"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="2"]
stream = ExtResource( 2 )
bus = "Game"

[node name="ExplodeSound2" parent="." instance=ExtResource( 1 )]

[node name="RandomAudioPlayer" parent="ExplodeSound2" index="0"]
min_pitch = 0.75
max_pitch = 1.0
volume_db = -24.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ExplodeSound2/RandomAudioPlayer" index="0"]
stream = ExtResource( 3 )
bus = "Cross"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ExplodeSound2/RandomAudioPlayer" index="1"]
stream = ExtResource( 10 )
bus = "Cross"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ExplodeSound2/RandomAudioPlayer" index="2"]
stream = ExtResource( 11 )
bus = "Cross"

[node name="TickTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]

[editable path="SpawnSound"]
[editable path="SpawnSound/RandomAudioPlayer"]
[editable path="TickSound"]
[editable path="TickSound/RandomAudioPlayer"]
[editable path="ExplodeSound"]
[editable path="ExplodeSound/RandomAudioPlayer"]
[editable path="ExplodeSound2"]
[editable path="ExplodeSound2/RandomAudioPlayer"]
